--- a/Pages/acerca.html
+++ b/Pages/acerca.html
@@ -27,10 +27,20 @@
           <img src="../Img/expand1.jpg" alt="Imagen 1">
         </div>
         <div class="item">
-          <p>Descripción de la imagen 1</p>
+          <p>Estamos comprometidos en brindarles un excelente servicio y atención al cliente en todo momento. Nos complace informarles que estamos disponibles para responder a cualquier consulta o inquietud que puedan tener a través de nuestras redes sociales. Nuestro equipo dedicado estará encantado de asistirlos y proporcionarles la información que necesiten.<br>
+          Además, les invitamos a explorar nuestras redes sociales, donde encontrarán una amplia gama de opciones para elegir entre nuestros planes, servicios y promociones. Estamos constantemente actualizando y mejorando nuestra oferta para garantizar que nuestros clientes obtengan los mejores beneficios y experiencias posibles.<br>
+          Ya sea que estén buscando un plan adecuado a sus necesidades, explorando nuestros servicios adicionales o aprovechando nuestras promociones especiales, encontrarán todo lo que necesitan en nuestras redes sociales. Estamos comprometidos en mantenerlos informados sobre nuestras últimas novedades y ofertas exclusivas.<br>
+          No duden en seguirnos en nuestras redes sociales para estar al tanto de las últimas actualizaciones y para contactarnos en cualquier momento. Estamos aquí para ayudarles y asegurarnos de que tengan una experiencia satisfactoria con nuestros productos y servicios.</p>
         </div>
         <div class="item">
-            <p>Descripción de la imagen 2</p>
+            <p><span class="resaltar">Misión</span>
+            <br><br>
+            Buscamos ayudar a las PYMEs y emprendimientos a alcanzar su mayor potencial publicitario a traves de medios digitales que se encuentran en auge en este momento.
+            <br><br><br>
+            <span class="resaltar">Visión</span>
+            <br><br>
+            Ser una empresa lider en el desarrollo de nuevas herramientas de marketing digital, manteniendo un trato cercano con las personas que confien en nuestro servicio.
+            </p>
         </div>
         <div class="item">
             <img src="../Img/expand2.jpg" alt="Imagen 2">
