--- a/Pages/testimonios.html
+++ b/Pages/testimonios.html
@@ -28,7 +28,7 @@
               <img src="../Img/testimonio1.jpg" alt="Imagen 1">
             </div>
             <div class="item">
-              <p>Descripción de la imagen 1</p>
+              <p>Atrapasueños fue uno de los primeros trabajos que hicimos, un proyecto q nos permitio tanto aprender como testear el alcance de los conocimientos que poseiamos en ese momento y a la vez testear hasta donde eramos capaces de llevar las ideas que teniamos.</p>
             </div>
             <div class="item">
                 <p>Dude mucho en contratar a una empresa de marketing digital, pero ahora puedo decir con certeza que fue la mejor decisión que tomé para hacer crecer mi negocio. Desde que comenzamos a trabajar juntos, mi presencia en línea ha explotado. Han llevado a cabo campañas publicitarias creativas y efectivas, han optimizado mi sitio web y han logrado que mi empresa destaque en las redes sociales. Gracias a su experiencia y habilidades, he experimentado un aumento impresionante en las ventas y en la cantidad de clientes que llegan a mi negocio.</p>
